# saju

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  docker-compose.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: auth.py  health.py  payments.py  reports.py  support.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: entities.py
apps/api/app/schemas/: auth.py  payment.py  report.py  support.py
apps/api/app/services/: repository.py  saju.py  security.py
apps/api/tests/integration/: test_api_contract.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/checkout/: page.tsx
apps/web/app/history/: page.tsx
apps/web/app/input/: page.tsx
apps/web/app/result/[reportId]/: page.tsx
apps/web/app/support/: page.tsx
apps/web/components/: checkout-panel.tsx  history-panel.tsx  inquiry-form.tsx  locked-section.tsx  page-shell.tsx  report-detail-panel.tsx  saju-input-form.tsx  section-card.tsx
apps/web/lib/: api.ts
docs/design-docs/: core-beliefs.md  index.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: mvp-foundation.md
docs/product-specs/: index.md  new-user-onboarding.md
docs/references/: design-system-reference-llms.txt  nixpacks-llms.txt  uv-llms.txt
